public/styles.css
:root {
    --orange: #E78A4E;
    --green: #A9B665;
    --pink: #FFA8CE;
    --highlight: #443e3c;
}

* {
    margin: 0;
    box-sizing: border-box;
}

::selection {
    background: var(--highlight);
}

h1 {
    color: var(--green);
    border-bottom: 1px solid;
    font-size: 2.5rem;
}

a {
    text-decoration: none;
    border-bottom: 1px solid;
    color: var(--pink);
}

a:hover {
    background-color: var(--highlight);
}

body {
    width: 100%;
    height: 100%;
    min-height: 100vh;
    display: flex;
    flex-direction: row;
    justify-content: center;
    font-family: Menlo, monospace;
    color: #f9f5d7;
    background-color: #1D2021;
}

.github-data {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}
.repo {
    width: 49%;
    padding: 1em;
    margin-bottom: 1rem;
    background: #353A3C;
}

.repo p {
    padding-top: .5em;
    font-size: .8em;
}

#horizontal-content {
    padding: 1.5em;
    width: 100%;
    height: 100vh;
}

#vertical-content {
    height: 100%;

    display: flex;
    flex-direction: column;
}

#main {
    padding-top: 3.5em;
}

#footer {
    margin-top: auto;
    padding-bottom: 1rem;
    display: flex;
}

@media (min-width: 450px) {
    #footer {
        justify-content: start;
    }
    
    #footer a {
        margin-right: 1em;
    }
}

@media (min-width: 1080px) {
    #horizontal-content {
        width: 60%;
    }
}

